language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/mutable_borrow_local_twice_invalid.exp
error[E07003]: invalid operation, could create dangling a reference
  ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/mutable_borrow_local_twice_invalid.move:6:9
  │
4 │         let r1 = &mut a;
  │                  ------ It is still being mutably borrowed by this reference
5 │         let r2 = &mut a;
6 │         *r2 = 2;
  │         ^^^^^^^ Invalid mutation of reference.

